SF-Perkin/force-app/main/default/objects/Voicemail_Queue__mdt/Voicemail_Queue__mdt.object-meta.xml
<CustomObject>
    <label>Voicemail Queue</label>
    <pluralLabel>Voicemail Queues</pluralLabel>
</CustomObject>