SF-Perkin/force-app/main/default/objects/Voicemail_Queue__mdt/fields/Amazon_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Queue_Name__c</fullName>
    <label>Amazon Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>