SF-Perkin/force-app/main/default/objects/Voicemail_Queue__mdt/fields/Case_Owner_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Queue_Name__c</fullName>
    <label>Case Owner Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>