SF-Perkin/force-app/main/default/objects/Voicemail_Queue__mdt/fields/Case_Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Developer_Name__c</fullName>
    <label>Case Queue Developer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>