SF-Perkin/force-app/main/default/objects/Voicemail_Queue__mdt/fields/Salesforce_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Queue_Name__c</fullName>
    <label>Salesforce Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>